test_scores/negative_dimers/features/Q96RY7.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q96RY7.pkl.xz